# Driver_Retention_Copilot

./: .env.example  .gitignore  README.md  design_doc.md  pyproject.toml  requirements.txt
agents/: action_normalizer.py  compliance_critic_agent.py  prompts.py  strategist_agent.py
app/: main.py  ui_streamlit.py
data/: driver_profiles.json  incentive_service_mock.py  support_tickets.csv
evaluation/: run_eval.py  seeded_invalid_plan.json  test_cases.json  test_infrastructure_regressions.py  test_policy_validation.py  test_self_correction.py  test_workflow_regressions.py
graph/: workflow.py
llm/: json_utils.py  llm_client.py
mcp_server/: server.py
outputs/: evaluation_trace.json
outputs/memory/: demo-1.json
rag/: ingest_policy.py  policy_chunks.json  retriever.py  vector_store.py
state/: memory.py  schemas.py
tools/: driver_profile_tool.py  incentive_tool.py  policy_rag_tool.py  policy_rules.py  policy_validator.py  support_ticket_tool.py
